--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2517,17 +2517,18 @@ input, select, textarea {
 		overflow: hidden;
 	}
 
-		.image:before {
-			content: '';
-			display: block;
-			position: absolute;
-			left: 0;
-			top: 0;
-			background-image: url("images/overlay.png");
-			width: 100%;
-			height: 100%;
-			z-index: 1;
-		}
+	.image:before {
+		content: '';
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 0;
+		background-image: url("images/overlay.png");
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+		opacity: 0.3; /* Esto aplica una opacidad del 20% */
+	}
 
 		.image img {
 			border-radius: 4px;
