--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4110,3 +4110,8 @@ input, select, textarea {
 					}
 
 	}
+
+	#new-view {
+		margin-top: 80px; /* Ajusta este valor según la altura del header */
+		text-align: center; /* Centra el texto horizontalmente */
+	  }
