--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           <li><a href="{{ '/#sobre-mi' | relative_url }}">Sobre mí</a></li>
           <li><a href="{{ '/#experiencia' | relative_url }}">Experiencia</a></li>
           <li><a href="{{ '/#habilidades' | relative_url }}">Habilidades</a></li>
-          <li><a href="https://infinitydevlab.com/">Proyectos</a></li>
+          <li><a href="https://jppq2026.infinitydevlab.com/">Proyectos</a></li>
         </ul>
       </li>
       <li><a href="{{ '/#servicios' | relative_url }}">Servicios</a></li>
