Actualización de curriculum, datos iniciales y contacto

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,11 @@
       <li><a href="https://gitlab.com/jppq2026" class="icon brands alt fa-gitlab"><span class="label">GitLab</span></a></li>
     </ul>
     <ul class="details">
-      <li>- <strong>Email</strong>: <a href="mailto:jppq2026@gmail.com" target="_blank">jppq2026@gmail.com</a></li>
-      <li>- <strong>Teléfono (WhatsApp)</strong>: <a href="https://wa.me/59179900174" target="_blank">79900174</a>, <a href="https://wa.me/59170941082">70941082</a></li>
-      <li>- <strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" target="_blank">www.linkedin.com/in/juan-pablo-paz-quiroga</a></li>
-      <li>- <strong>GitHub</strong>: <a href="https://github.com/jppq2026" target="_blank">github.com/jppq2026</a></li>
-      <li>- <strong>GitLab</strong>: <a href="https://gitlab.com/jppq2026" target="_blank">gitlab.com/jppq2026</a></li>
+      <li> <strong>Email</strong>: <a href="mailto:jppq2026@gmail.com" target="_blank">jppq2026@gmail.com</a></li>
+      <li> <strong>Teléfono (WhatsApp)</strong>: <a href="https://wa.me/59179900174" target="_blank">79900174</a>, <a href="https://wa.me/59170941082">70941082</a></li>
+      <li> <strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" target="_blank">www.linkedin.com/in/juan-pablo-paz-quiroga</a></li>
+      <li> <strong>GitHub</strong>: <a href="https://github.com/jppq2026" target="_blank">github.com/jppq2026</a></li>
+      <li> <strong>GitLab</strong>: <a href="https://gitlab.com/jppq2018" target="_blank">gitlab.com/jppq2018</a></li>
     </ul>
     <ul class="copyright">
       <li>&copy; Juan Pablo Paz Quiroga. Todos los derechos reservados.</li>
