--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/assets/css/main.css" />
     <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+    <link rel="icon" href="/assets/favicon.png" type="image/png">
   </head>
   <body>
     <div id="wrapper">
