--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-  <h1 id="logo"><a href="{{ '/' | relative_url }}">Juan Pablo Paz Quiroga</a></h1>
+  <h1 id="logo"><a href="{{ 'https://infinitydevlab.com/' | relative_url }}">Juan Pablo Paz Quiroga</a></h1>
   <nav id="nav">
     <ul>
       <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
